# struct_core_identification

./: CMakeLists.txt  main.cpp  package.xml
